After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689383 - Misc. fixes
Misc. fixes
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-30 22:48 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2012-11-30 22:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't add gnome-session-inhibit.1 to the repo (3.84 KB, patch)
2012-11-30 22:48 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
gsm-fail-whale: Stop a compiler warning (740 bytes, patch)
2012-11-30 22:48 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2012-11-30 22:48:05 UTC
See patches.
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-11-30 22:48:07 UTC
Created attachment 230355 [details] [review]
Don't add gnome-session-inhibit.1 to the repo

This is a generated file.
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-11-30 22:48:09 UTC
Created attachment 230356 [details] [review]
gsm-fail-whale: Stop a compiler warning
Comment 3 Ray Strode [halfline] 2012-11-30 22:49:00 UTC
Review of attachment 230355 [details] [review]:

sure
Comment 4 Ray Strode [halfline] 2012-11-30 22:50:27 UTC
Review of attachment 230356 [details] [review]:

okie dokie
Comment 5 Jasper St. Pierre (not reading bugmail) 2012-11-30 22:51:22 UTC
Attachment 230355 [details] pushed as 254a835 - Don't add gnome-session-inhibit.1 to the repo
Attachment 230356 [details] pushed as 2a4bf47 - gsm-fail-whale: Stop a compiler warning