gsm-fail-whale: Stop a compiler warning

https://bugzilla.gnome.org/show_bug.cgi?id=689383